[bugfix] bugfix a2a client and refactor demo client (#28)